--- a/opendiamond/scopeserver/gigapan/templates/scopeserver/gigapan_browse.html
+++ b/opendiamond/scopeserver/gigapan/templates/scopeserver/gigapan_browse.html
@@ -22,7 +22,7 @@
 {% endblock %}
 
 {% block content %}
-<form action="{% url 'generate' %}" method="POST">
+<form action="{% url 'gigapan:generate' %}" method="POST">
 {% csrf_token %}
 <span class="img_results">
 <div>Select some GigaPans to search:</div>
