Remove places we used settings.LOGIN_URL and settings.LOGOUT_URL
And without these we no longer need the `render_response` wrapper
function around `django.shortcuts.render`.

--- a/opendiamond/scopeserver/core/templates/scopeserver/base.html
+++ b/opendiamond/scopeserver/core/templates/scopeserver/base.html
@@ -10,11 +10,11 @@
 <body>
     <h1>{% block pagetitle %}OpenDiamond Scopeserver{% endblock %}</h1>
     <div style="float: right">
-{% if user.is_anonymous %}
-    <a href="{{ LOGIN_URL }}">Login</a></li>
+{% if user.is_authenticated %}
+    Welcome {{ user.username }}
+    <a href="{% url 'logout' %}?next={% url 'scopeserver:index' %}">Logout</a></li>
 {% else %}
-    Welcome {{ user }}
-    <a href="{{ LOGOUT_URL }}?next={% url 'scopeserver:index' %}">Logout</a></li>
+    <a href="{% url 'login' %}">Login</a></li>
 {% endif %}
     </div>
     <div id="sidebar">
